# ece3514-a3-prime

./: .gitignore  CMakeLists.txt  README.md
include/: prime.hpp
src/: main.cpp  prime.cpp
tests/: test.cpp
